[package]
name = "rapi"
version = "0.1.0"
authors = ["shannon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rand = "0.7.2"
curl = "0.4.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "0.2.36"
chrono = "0.4"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
chrono-tz = "0.5.1"
